CompletableFuture for performance